--- a/less/_general-media.less
+++ b/less/_general-media.less
@@ -8,12 +8,13 @@
             max-width: 747px;
         }
     }
-}
-
-@media (max-width: 1024px) {
+    
     html.overflow {
         margin-right: 0px;
     }
+}
+
+@media (max-width: 1024px) {
     
     .container {
         padding: 0px 20px;
@@ -112,6 +113,17 @@
     .main-caption-s {
         font-size: 20px;
         line-height: 110%;
+    }
+    
+    .buttons__wrapper {
+        .slider-button {
+            display: none;
+        }
+        
+        .main_button,
+        .main-button-shadow {
+            margin: 0px auto;
+        }
     }
     
     /* Filter */
