--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -493,14 +493,14 @@ body {
 
 /* Slider buttons */
 
-
 .buttons__wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
 
-    .main-button-shadow {
+    .main-button-shadow,
+    .main_button {
         margin: 0px 20px;
     }
 }
@@ -513,7 +513,15 @@ body {
     height: 52px;
     border-radius: 50%;
     border: 1px solid #BDBDBD;
+    color: #3C4153;
     transition: color .4s, border-color .4s;
+    
+    &.disabled {
+        opacity: 0.6;
+        border-color: #BDBDBD;
+        color: #3C4153;
+        cursor: auto;
+    }
 }
     
 /* Filter */
@@ -634,6 +642,35 @@ body {
     }
     
     &.active {
+        pointer-events: none;
+        color: #636C8A;
+        margin-right: 0px;
+        
+        &::before {
+            display: none;
+        }
+    }
+}
+
+.breadcrumbs__link {
+    position: relative;
+    margin-right: 4px;
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 21px;
+    
+    &::before {
+        content: "";
+        position: absolute;
+        right: -4px;
+        bottom: 4px;
+        height: 14px;
+        width: 1px;
+        background-color: #3C4153;
+        pointer-events: none;
+    }
+    
+    &:last-child {
         pointer-events: none;
         color: #636C8A;
         margin-right: 0px;
