--- a/less/_popup-media.less
+++ b/less/_popup-media.less
@@ -1,7 +1,46 @@
-@media (max-width: 768px) {
+@media screen and (max-width: 1220px) {
+    /* Popup galery */
     
+    .popup-gallery__wrapper {
+        max-width: 768px;
+        
+        .slider-button {
+            display: none;
+        }
+    }
+    
+    .popup-gallery__general-img {
+        height: 586px;
+    }
+    
+    .popup-gallery__header {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+    
+    .popup-gallery__name {
+        font-size: 20px;
+        line-height: 130%;
+        margin-bottom: 20px;
+    }
+    
+    .popup-gallery__city {
+        font-size: 16px;
+        line-height: 130%
+    }
+    
+    .popup-gallery__img-item {
+        width: 167px;
+        height: 84px;
+        margin-right: 20px;
+    }
+    
+    /* //Popup galery */
+}
+
+@media screen and (max-width: 767px) {
     .popup {
-        max-width: 100%;
         padding: 30px;
     }
     
@@ -34,5 +73,67 @@
             text-align: center;
         }
     }
+    
+    /* Popup gallery */
+    
+    .popup-gallery {
+        padding: 0px;
+    }
+    
+    .popup-gallery__header {
+        max-width: 85%;
+    }
+    
+    .popup-gallery__img-item {
+        width: 86px;
+        height: 41px;
+        margin-right: 10px;
+    }
+    
+    /* //Popup gallery */
 }
 
+@media screen and (max-width: 576px) {
+    
+    /* Popup */
+    
+    .popup {
+        max-width: 100%;
+        padding: 30px 20px;
+    }
+    
+    /* //Popup */
+    
+    /* Popup gallery */
+    
+    .popup-gallery {
+        padding: 0px;
+    }
+    
+    .popup-gallery__header {
+        margin-bottom: 10px;
+    }
+    
+    .popup-gallery__name {
+        font-size: 16px;
+        line-height: 130%;
+        margin-bottom: 10px;
+    }
+    
+    .popup-gallery__city {
+        font-size: 14px;
+        line-height: 130%;
+    }
+    
+    .popup-gallery__general-img {
+        height: 298px;
+    }
+    
+    .popup-gallery__img-item {
+        width: 86px;
+        height: 41px;
+        margin-right: 10px;
+    }
+    
+    /* //Popup gallery */
+}
