--- a/less/_popup.less
+++ b/less/_popup.less
@@ -39,6 +39,145 @@
     transition: transform 0.4s;
 }
 
+.popup-gallery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    background-color: transparent;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border-radius: 0px;
+    background: rgba(60, 65, 83, 0.75);
+    transform: translate(0%, -100%);
+    visibility: hidden;
+    opacity: 0;
+    top: 0px;
+    left: 0px;
+    transition: opacity .6s, visibility 0s .6s, transform .6s;
+    
+    &.active {
+        visibility: visible;
+        opacity: 1;
+        transform: translate(0%, 0%);
+        transition: opacity .6s, visibility 0s 0s, transform .6s;
+    }
+    
+    .close__popup {
+        color: #ffffff;
+        width: 18px;
+        height: 18px;
+        right: 30px;
+        top: 30px;
+    }
+}
+
+.popup-gallery__wrapper {
+    max-width: 1010px;
+    width: 100%;
+    max-height: 100%;
+    padding: 25px 20px 25px;
+    color: #ffffff;
+    position: relative;
+    
+    .slider-button {
+        position: absolute;
+        left: -96px;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: #ffffff;
+        
+        &.next {
+            left: auto;
+            right: -96px;
+        }
+    }
+}
+
+.popup-gallery__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 30px;
+}
+
+.popup-gallery__name {
+    font-size: 24px;
+    line-height: 130%;
+    max-width: 770px;
+}
+
+.popup-gallery__city {
+    font-size: 20px;
+    line-height: 130%;
+    white-space: nowrap;
+}
+
+.popup-gallery__general-img {
+    width: 100%;
+    height: 446px;
+    margin-bottom: 20px;
+    
+    &.active {
+        animation: gallery-show .6s;
+    }
+    
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+@keyframes gallery-show {
+    0% {
+        transform: perspective(600px) translateY(-100%) rotateX(45deg);
+        opacity: 0;
+    }
+    
+    100% {
+        transform: perspective(600px) translateY(0%) rotateX(0deg);
+        opacity: 1;
+    }
+}
+
+.popup-gallery__img-list {
+    display: flex;
+    margin-right: -30px;
+    overflow: auto;
+    width: 100%;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+.popup-gallery__img-item {
+    width: 170px;
+    height: 86px;
+    margin-right: 30px;
+    border: 2px solid transparent;
+    transition: border-color .4s;
+    flex-shrink: 0;
+    cursor: pointer;
+    
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    &.active {
+        border-color: #5C5DF7;
+    }
+}
+
 .close__popup {
     display: flex;
     justify-content: center;
@@ -62,12 +201,23 @@
     top: 0px;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background: rgba(60, 65, 83, 0.75);
     z-index: 3;
 }
 
 .overlay.active {
     display: block;
+    animation: overlay .6s;
+}
+
+@keyframes overlay {
+    0% {
+        transform: translateY(-100%);
+    }
+    
+    100% {
+        transform: translateY(0%);
+    }
 }
 
 .popup-reviews {
